--- a/src/components/Search/index.css
+++ b/src/components/Search/index.css
@@ -91,7 +91,7 @@ body {
   background: white;
   max-height: 400px;
   overflow-y: auto;
-  padding: 10px;
+  padding: 10px 0px;
   width: 100%;
 }
 
@@ -102,6 +102,7 @@ body {
   border-bottom: 1px solid #ddd;
   padding-bottom: 8px;
   margin-bottom: 8px;
+  width: 100%;
 }
 
 .tabs button {
@@ -124,7 +125,7 @@ body {
 }
 
 .dropdown li {
-  padding: 8px;
+  padding: 8px 0px;
   border-radius: 5px;
   display: flex;
   align-items: center;
